--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -118,7 +118,9 @@
             border-radius: 24px;
             align-items: center;
             word-wrap: break-word;
-            word-break: break-all;
+            word-break: break-word;
+            padding: 5px;
+            font-size: 12px;
             min-height: 50px;
             min-width: 120px;
             width: auto;
@@ -138,7 +140,9 @@
             border-radius: 24px;
             align-items: center;
             word-wrap: break-word;
-            word-break: break-all;
+            word-break: break-word;
+            padding: 5px;
+            font-size: 12px;
             min-height: 50px;
             min-width: 120px;
             width: auto;
@@ -158,7 +162,9 @@
             border-radius: 24px;
             align-items: center;
             word-wrap: break-word;
-            word-break: break-all;
+            word-break: break-word;
+            padding: 5px;
+            font-size: 12px;
             min-height: 50px;
             min-width: 120px;
             width: auto;
@@ -178,7 +184,9 @@
             border-radius: 24px;
             align-items: center;
             word-wrap: break-word;
-            word-break: break-all;
+            word-break: break-word;
+            padding: 5px;
+            font-size: 12px;
             min-height: 50px;
             min-width: 120px;
             width: auto;
@@ -311,7 +319,7 @@
 </div>
 </div>
 
-<div class="row">
+<div class="row mb-4">
     <div class="col-12">
         <button class="btn btn-primary btn-label waves-effect right waves-light" style="float:right;" (click)="saveCuerpos()" [disabled]="articles_proyects.length < 1"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Siguiente</button>
     </div>
@@ -350,7 +358,9 @@
                 border-radius: 24px;
                 align-items: center;
                 word-wrap: break-word;
-                word-break: break-all;
+                word-break: break-word;
+                padding: 5px;
+                font-size: 12px;
                 min-height: 50px;
                 min-width: 120px;
                 width: auto;
@@ -370,7 +380,9 @@
                 border-radius: 24px;
                 align-items: center;
                 word-wrap: break-word;
-                word-break: break-all;
+                word-break: break-word;
+                padding: 5px;
+                font-size: 12px;
                 min-height: 50px;
                 min-width: 120px;
                 width: auto;
@@ -390,7 +402,9 @@
                 border-radius: 24px;
                 align-items: center;
                 word-wrap: break-word;
-                word-break: break-all;
+                word-break: break-word;
+                padding: 5px;
+                font-size: 12px;
                 min-height: 50px;
                 min-width: 120px;
                 width: auto;
@@ -410,7 +424,9 @@
                 border-radius: 24px;
                 align-items: center;
                 word-wrap: break-word;
-                word-break: break-all;
+                word-break: break-word;
+                padding: 5px;
+                font-size: 12px;
                 min-height: 50px;
                 min-width: 120px;
                 width: auto;
@@ -601,7 +617,7 @@
 </div>
 </div>
 
-    <div class="row">
+    <div class="row mb-4">
         <div class="col-lg-12">
            <!-- <div class="row align-items-center">
             <div class="col-lg-8 text-center">
@@ -852,7 +868,9 @@
                 border-radius: 24px;
                 align-items: center;
                 word-wrap: break-word;
-                word-break: break-all;
+                word-break: break-word;
+                padding: 5px;
+                font-size: 12px;
                 min-height: 50px;
                 min-width: 120px;
                 width: auto;
@@ -872,7 +890,9 @@
                 border-radius: 24px;
                 align-items: center;
                 word-wrap: break-word;
-                word-break: break-all;
+                word-break: break-word;
+                padding: 5px;
+                font-size: 12px;
                 min-height: 50px;
                 min-width: 120px;
                 width: auto;
@@ -892,7 +912,9 @@
                 border-radius: 24px;
                 align-items: center;
                 word-wrap: break-word;
-                word-break: break-all;
+                word-break: break-word;
+                padding: 5px;
+                font-size: 12px;
                 min-height: 50px;
                 min-width: 120px;
                 width: auto;
@@ -912,7 +934,9 @@
                 border-radius: 24px;
                 align-items: center;
                 word-wrap: break-word;
-                word-break: break-all;
+                word-break: break-word;
+                padding: 5px;
+                font-size: 12px;
                 min-height: 50px;
                 min-width: 120px;
                 width: auto;
@@ -1103,7 +1127,7 @@
     </div>
 </div>
 </div>
-    <div class="row">
+    <div class="row mb-4">
         <div class="col-lg-12"> 
             <div style="float:right;"><!--class="row justify-content-end"-->
                 <button type="button" class="btn btn-primary btn-label waves-effect right waves-light" (click)="siguiente()" [disabled]="cuerpo_installations.length < 1"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Siguiente</button>
@@ -1248,7 +1272,9 @@
             border-radius: 24px;
             align-items: center;
             word-wrap: break-word;
-            word-break: break-all;
+            word-break: break-word;
+            padding: 5px;
+            font-size: 12px;
             min-height: 50px;
             min-width: 120px;
             width: auto;
@@ -1268,7 +1294,9 @@
             border-radius: 24px;
             align-items: center;
             word-wrap: break-word;
-            word-break: break-all;
+            word-break: break-word;
+            padding: 5px;
+            font-size: 12px;
             min-height: 50px;
             min-width: 120px;
             width: auto;
@@ -1288,7 +1316,9 @@
             border-radius: 24px;
             align-items: center;
             word-wrap: break-word;
-            word-break: break-all;
+            word-break: break-word;
+            padding: 5px;
+            font-size: 12px;
             min-height: 50px;
             min-width: 120px;
             width: auto;
@@ -1308,7 +1338,9 @@
             border-radius: 24px;
             align-items: center;
             word-wrap: break-word;
-            word-break: break-all;
+            word-break: break-word;
+            padding: 5px;
+            font-size: 12px;
             min-height: 50px;
             min-width: 120px;
             width: auto;
@@ -1430,7 +1462,7 @@
         </div>
         </div>
         
-        <div class="row">
+        <div class="row mb-4">
             <div class="col-12">
                 <button class="btn btn-success btn-label waves-effect right waves-light" style="float:right;"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Terminar</button>
             </div>
