--- a/src/app/pages/projects/list/list.component.html
+++ b/src/app/pages/projects/list/list.component.html
@@ -132,7 +132,7 @@
                   </div>
                   <div class="flex-shrink-0">
                       <div class="text-muted">
-                          Creado el <i class="ri-calendar-event-fill me-1 align-bottom"></i>{{formatDate(data.createdAt)}}
+                          Creado el <!--<i class="ri-calendar-event-fill me-1 align-bottom"></i>-->{{formatDate(data.createdAt)}}
                       </div>
                   </div>
 
