correccion visual botonera crear proyecto

--- a/src/app/pages/projects/create/create.component.scss
+++ b/src/app/pages/projects/create/create.component.scss
@@ -47,3 +47,18 @@
     cursor: not-allowed;
   }
   
+  .select-variable:hover{
+    background-color: #405189 !important;
+    color: #fff !important;
+    cursor: pointer !important;
+}
+
+.select-variable-check{
+    background-color: #405189 !important;
+    color: #fff !important;
+    cursor: pointer !important;
+}
+
+.title-step{
+    margin-bottom: 40px;
+}
