--- a/src/app/pages/projects/create/create.component.html
+++ b/src/app/pages/projects/create/create.component.html
@@ -97,13 +97,13 @@
 </div>
 
 <div class="row">
-<div class="col-sm-12 justify-content-end" style="display: block;padding: 0px;"><!--position: fixed;bottom: 60px;-->
-    <div class="row justify-content-end">
-        <div class="col-12">
-            <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" style="margin-bottom: 10px;float: right;" (click)="siguiente()">Siguiente</button><!--routerLink="/projects/create/type"-->
+    <div class="col-sm-12 justify-content-center" style="display: block;padding: 0px;">
+        <div class="row justify-content-center">
+            <div class="col-2" style="text-align: center;">
+                <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" style="margin-bottom: 10px;" (click)="siguiente()">Siguiente</button><!--routerLink="/projects/create/type"-->
+            </div>
         </div>
     </div>
-</div>
 </div>
 </ng-container>
 
@@ -126,16 +126,18 @@
         </div>
         </div>
     </div>
-<div class="row">
-    <div class="col-sm-12 justify-content-end" style="display: block;padding: 0px;">
-        <div class="row justify-content-end">
-            <div class="col-12">                
-                <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" style="margin-bottom: 10px;float: left;" (click)="regresar()">Regresar</button>
-                <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" style="margin-bottom: 10px;float: right;" (click)="siguiente2()">Siguiente</button>
+        <div class="row">
+            <div class="col-sm-12 justify-content-center" style="display: block;padding: 0px;">
+                <div class="row justify-content-center">
+                    <div class="col-2" style="text-align: center;">                
+                        <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" style="margin-bottom: 10px;" (click)="regresar()">Regresar</button>
+                    </div>
+                    <div class="col-2" style="text-align: center;">
+                        <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" style="margin-bottom: 10px;" (click)="siguiente2()">Siguiente</button>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
 </ng-container>
 
 <ng-container *ngIf="step == 3">
@@ -157,16 +159,19 @@
         </div>
         </div>
     </div>
-<div class="row">
-    <div class="col-sm-12 justify-content-end" style="display: block;padding: 0px;">
-        <div class="row justify-content-end">
-            <div class="col-12">                
-                <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" style="margin-bottom: 10px;float: left;" (click)="regresar()">Regresar</button>
-                <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" style="margin-bottom: 10px;float: right;" (click)="siguiente2()">Siguiente</button>
+
+    <div class="row">
+        <div class="col-sm-12 justify-content-center" style="display: block;padding: 0px;">
+            <div class="row justify-content-center">
+                <div class="col-2" style="text-align: center;">                
+                    <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" style="margin-bottom: 10px;" (click)="regresar()">Regresar</button>
+                </div>
+                <div class="col-2" style="text-align: center;">
+                    <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" style="margin-bottom: 10px;" (click)="siguiente2()">Siguiente</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
 </ng-container>
 
 <ng-container *ngIf="step == 4">
@@ -180,7 +185,7 @@
                      
         <div class="col-lg-3">
             <div class="card border select-variable" style="background: #d1eeea;margin-top: 1.5rem;" [ngClass]="{'select-variable-check': validateVariable(step+'|ambiental')}" (click)="selectVariable(step+'|ambiental')">
-                <div class="card-body" style="text-align: center;">
+                <div class="card-body" style="text-align: center;min-height: 230px;">
                     <div style="background-color: #d7e8d8;width: 40px;height: 40px; border: 1px solid #d7e8d8;border-radius: 24px;margin: auto;">
                         <i class="ri-plant-fill" style="font-size: 24px;color: #4a9d4b;"></i>
                     </div>
@@ -193,7 +198,7 @@
         </div>
         <div class="col-lg-3">
             <div class="card border select-variable" style="background: #faeedc;margin-top: 1.5rem;" [ngClass]="{'select-variable-check': validateVariable(step+'|seguridad')}" (click)="selectVariable(step+'|seguridad')">
-                <div class="card-body" style="text-align: center;">
+                <div class="card-body" style="text-align: center;min-height: 230px;">
                     <div style="background-color: #f4d890;width: 40px;height: 40px; border: 1px solid #f4d890;border-radius: 24px;margin: auto;">
                         <i class="ri-briefcase-fill" style="font-size: 24px;color: #ebaf47;"></i>
                     </div>
@@ -205,7 +210,7 @@
 
         <div class="col-lg-3">
             <div class="card border select-variable" style="background: #fae1dc;margin-top: 1.5rem;" [ngClass]="{'select-variable-check': validateVariable(step+'|laboral')}" (click)="selectVariable(step+'|laboral')">
-                <div class="card-body" style="text-align: center;">
+                <div class="card-body" style="text-align: center;min-height: 230px;">
                     <div style="background-color: #ebbdb4;width: 40px;height: 40px; border: 1px solid #ebbdb4;border-radius: 24px;margin: auto;">
                         <i class="ri-shirt-fill" style="font-size: 24px;color: #f25c03;"></i>
                     </div>
@@ -217,7 +222,7 @@
         
         <div class="col-lg-3">
             <div class="card border select-variable" style="background: #b3ebf6;margin-top: 1.5rem;" [ngClass]="{'select-variable-check': validateVariable(step+'|energia')}" (click)="selectVariable(step+'|energia')">
-                <div class="card-body" style="text-align: center;">
+                <div class="card-body" style="text-align: center;min-height: 230px;">
                     <div style="background-color: #8de1f2;width: 40px;height: 40px; border: 1px solid #8de1f2;border-radius: 24px;margin: auto;">
                         <i class="ri-flashlight-line" style="font-size: 24px;color: #0cc2e7;"></i>
                     </div>
@@ -228,10 +233,10 @@
         </div>
 
         <div class="col-lg-3">
-            <div class="card border select-variable" style="background: #b3ebf6;margin-top: 1.5rem;" [ngClass]="{'select-variable-check': validateVariable(step+'|todos')}" (click)="selectVariable(step+'|todos')">
+            <div class="card border select-variable" style="background: #d2d2d2;margin-top: 1.5rem;" [ngClass]="{'select-variable-check': validateVariable(step+'|todos')}" (click)="selectVariable(step+'|todos')">
                 <div class="card-body" style="text-align: center;">
-                    <div style="background-color: #8de1f2;width: 40px;height: 40px; border: 1px solid #8de1f2;border-radius: 24px;margin: auto;">
-                        <i class="ri-flashlight-line" style="font-size: 24px;color: #0cc2e7;"></i>
+                    <div style="background-color: #b1b0b0;width: 40px;height: 40px; border: 1px solid #b1b0b0;border-radius: 24px;margin: auto;">
+                        <i class="ri-bookmark-line" style="font-size: 24px;color: #4b4b4b;"></i>
                     </div>
                     <p style="margin-top: 10px;"><b>Todos los ámbitos normativos</b></p>
                 </div>
@@ -243,18 +248,20 @@
     </div>
     
 <div class="row">
-    <div class="col-sm-12 justify-content-end" style="display: block;padding: 0px;">
-        <div class="row justify-content-end">
-            <div class="col-12">                
-                <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" style="margin-bottom: 10px;float: left;" (click)="regresar()">Regresar</button>
-                <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" style="margin-bottom: 10px;float: right;" (click)="siguiente2()">Siguiente</button>
+    <div class="col-sm-12 justify-content-center" style="display: block;padding: 0px;">
+        <div class="row justify-content-center">
+            <div class="col-2" style="text-align: center;">                
+                <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" style="margin-bottom: 10px;" (click)="regresar()">Regresar</button>
+            </div>
+            <div class="col-2" style="text-align: center;">
+                <button mat-raised-button class="btn btn-danger w-lg waves-effect waves-light" style="margin-bottom: 10px;" (click)="siguiente2()">Siguiente</button>
             </div>
         </div>
     </div>
 </div>
 </ng-container>
 
-<ng-container *ngIf="step == 4">
+<ng-container *ngIf="step == 5">
     <!--<div class="row">-->
     <div class="row justify-content-center" style="padding-top: 10%;">
         <!--<ng-container *ngFor="let t of types;let impar=odd;">
