--- a/src/app/pages/projects/list/list.component.html
+++ b/src/app/pages/projects/list/list.component.html
@@ -95,7 +95,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="mt-auto">
+                 <!--<div class="mt-auto">
                       <div class="d-flex mb-2">
                           <div class="flex-grow-1">
                               <div>Identificación</div>
@@ -106,8 +106,8 @@
                       </div>
                       <div class="progress-sm animated-progess">
                         <ngb-progressbar [value]="data.progressBar ? data.progressBar : 10" type="success" class="progress-sm"></ngb-progressbar>
-                      </div><!-- /.progress -->
-                  </div>
+                      </div>
+                  </div>-->
               </div>
 
           </div>
