--- a/src/app/pages/projects/list/list.component.html
+++ b/src/app/pages/projects/list/list.component.html
@@ -96,7 +96,7 @@
                       </div>
                   </div>
                   
-                  <div class="mt-auto">
+                  <!--<div class="mt-auto">
                       <div class="d-flex mb-2">
                           <div class="flex-grow-1">
                               <div>Identificación</div>
