--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -2,7 +2,7 @@
 <app-breadcrumbs title="Paso 3: Identificación - {{project.nombre}}" [breadcrumbItems]="breadCrumbItems"></app-breadcrumbs>
 <!-- End Breadcrumbs -->
 
- <div class="row project-wrapper">
+ <div class="row project-wrapper mb-4">
     <div class="col-xxl-12">
         
         <div class="row">
@@ -113,20 +113,7 @@
         margin-left: 30px;
         margin-right: 30px;
     ">
-            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
-            cursor: pointer;
-            border-radius: 24px;
-            align-items: center;
-            word-wrap: break-word;
-            word-break: break-word;
-            padding: 5px;
-            font-size: 12px;
-            min-height: 50px;
-            min-width: 120px;
-            width: auto;
-            display:flex;
-            justify-content: center;
-            align-items: center;" class="div-texto-check texto-check">
+            <div class="div-texto disabled">
                 Legislación ambiental
             </div><!--[ngClass]="{'div-texto-check texto-check': validateCuerpo(c.cuerpoLegal)}" (click)="selectCuerpo(c.cuerpoLegal)"-->
         </div>
@@ -135,20 +122,7 @@
         margin-left: 30px;
         margin-right: 30px;
     ">
-            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
-            cursor: pointer;
-            border-radius: 24px;
-            align-items: center;
-            word-wrap: break-word;
-            word-break: break-word;
-            padding: 5px;
-            font-size: 12px;
-            min-height: 50px;
-            min-width: 120px;
-            width: auto;
-            display:flex;
-            justify-content: center;
-            align-items: center;">
+            <div class="div-texto disabled">
                 Legislación de Seguridad y Salud en el trabajo 
             </div>
         </div>
@@ -157,20 +131,7 @@
         margin-left: 30px;
         margin-right: 30px;
     ">
-            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
-            cursor: pointer;
-            border-radius: 24px;
-            align-items: center;
-            word-wrap: break-word;
-            word-break: break-word;
-            padding: 5px;
-            font-size: 12px;
-            min-height: 50px;
-            min-width: 120px;
-            width: auto;
-            display:flex;
-            justify-content: center;
-            align-items: center;">
+            <div class="div-texto disabled">
                 Legislación laboral 
             </div>
         </div>
@@ -179,20 +140,7 @@
         margin-left: 30px;
         margin-right: 30px;
     ">
-            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
-            cursor: pointer;
-            border-radius: 24px;
-            align-items: center;
-            word-wrap: break-word;
-            word-break: break-word;
-            padding: 5px;
-            font-size: 12px;
-            min-height: 50px;
-            min-width: 120px;
-            width: auto;
-            display:flex;
-            justify-content: center;
-            align-items: center;">
+            <div class="div-texto disabled">
                 Legislación de energía 
             </div>
         </div>
@@ -353,20 +301,7 @@
             margin-left: 30px;
             margin-right: 30px;
         ">
-                <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
-                cursor: pointer;
-                border-radius: 24px;
-                align-items: center;
-                word-wrap: break-word;
-                word-break: break-word;
-                padding: 5px;
-                font-size: 12px;
-                min-height: 50px;
-                min-width: 120px;
-                width: auto;
-                display:flex;
-                justify-content: center;
-                align-items: center;" class="div-texto-check texto-check">
+                <div class="div-texto disabled">
                     Legislación ambiental
                 </div><!--[ngClass]="{'div-texto-check texto-check': validateCuerpo(c.cuerpoLegal)}" (click)="selectCuerpo(c.cuerpoLegal)"-->
             </div>
@@ -375,20 +310,7 @@
             margin-left: 30px;
             margin-right: 30px;
         ">
-                <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
-                cursor: pointer;
-                border-radius: 24px;
-                align-items: center;
-                word-wrap: break-word;
-                word-break: break-word;
-                padding: 5px;
-                font-size: 12px;
-                min-height: 50px;
-                min-width: 120px;
-                width: auto;
-                display:flex;
-                justify-content: center;
-                align-items: center;">
+                <div class="div-texto disabled">
                     Legislación de Seguridad y Salud en el trabajo 
                 </div>
             </div>
@@ -397,20 +319,7 @@
             margin-left: 30px;
             margin-right: 30px;
         ">
-                <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
-                cursor: pointer;
-                border-radius: 24px;
-                align-items: center;
-                word-wrap: break-word;
-                word-break: break-word;
-                padding: 5px;
-                font-size: 12px;
-                min-height: 50px;
-                min-width: 120px;
-                width: auto;
-                display:flex;
-                justify-content: center;
-                align-items: center;">
+                <div class="div-texto disabled">
                     Legislación laboral 
                 </div>
             </div>
@@ -419,20 +328,7 @@
             margin-left: 30px;
             margin-right: 30px;
         ">
-                <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
-                cursor: pointer;
-                border-radius: 24px;
-                align-items: center;
-                word-wrap: break-word;
-                word-break: break-word;
-                padding: 5px;
-                font-size: 12px;
-                min-height: 50px;
-                min-width: 120px;
-                width: auto;
-                display:flex;
-                justify-content: center;
-                align-items: center;">
+                <div class="div-texto disabled">
                     Legislación de energía 
                 </div>
             </div>
@@ -698,7 +594,7 @@
                 <label for="area-field" class="form-label">Area Administrativa</label>
                 <select class="form-select mb-3" aria-label="Area Administrativa" placeholder="Seleccione Area Administrativa" formControlName="area"
                 (change)="selectArea($event)">
-                    <option selected>Seleccione Area Administrativa </option>
+                    <option value="" selected>Seleccione Area Administrativa </option>
                     <option *ngFor="let r of areas;" value="{{r.id}}">{{r.nombre}}</option>
                 </select>
                 <div class="invalid-feedback">Por favor ingresar area administrativa.</div>
@@ -708,7 +604,7 @@
                 <div class="mb-3">
                     <label for="area-field" class="form-label">Sub Area Administrativa</label>
                     <select class="form-select mb-3" formControlName="sub_area" placeholder="Seleccione Sub Area Administrativa" (change)="selectAreaChildren($event, i)">
-                        <option selected>Seleccione Sub Area Administrativa</option>
+                        <option value="" selected>Seleccione Sub Area Administrativa</option>
                         <option *ngFor="let o of item.options;" value="{{o.id}}">{{o.nombre}}</option>
                     </select>
                     <div class="invalid-feedback">Por favor ingresar area administrativa.</div>
@@ -863,20 +759,7 @@
             margin-left: 30px;
             margin-right: 30px;
         ">
-                <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
-                cursor: pointer;
-                border-radius: 24px;
-                align-items: center;
-                word-wrap: break-word;
-                word-break: break-word;
-                padding: 5px;
-                font-size: 12px;
-                min-height: 50px;
-                min-width: 120px;
-                width: auto;
-                display:flex;
-                justify-content: center;
-                align-items: center;" class="div-texto-check texto-check">
+                <div class="div-texto disabled">
                     Legislación ambiental
                 </div><!--[ngClass]="{'div-texto-check texto-check': validateCuerpo(c.cuerpoLegal)}" (click)="selectCuerpo(c.cuerpoLegal)"-->
             </div>
@@ -885,20 +768,7 @@
             margin-left: 30px;
             margin-right: 30px;
         ">
-                <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
-                cursor: pointer;
-                border-radius: 24px;
-                align-items: center;
-                word-wrap: break-word;
-                word-break: break-word;
-                padding: 5px;
-                font-size: 12px;
-                min-height: 50px;
-                min-width: 120px;
-                width: auto;
-                display:flex;
-                justify-content: center;
-                align-items: center;">
+                <div class="div-texto disabled">
                     Legislación de Seguridad y Salud en el trabajo 
                 </div>
             </div>
@@ -907,20 +777,7 @@
             margin-left: 30px;
             margin-right: 30px;
         ">
-                <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
-                cursor: pointer;
-                border-radius: 24px;
-                align-items: center;
-                word-wrap: break-word;
-                word-break: break-word;
-                padding: 5px;
-                font-size: 12px;
-                min-height: 50px;
-                min-width: 120px;
-                width: auto;
-                display:flex;
-                justify-content: center;
-                align-items: center;">
+                <div class="div-texto disabled">
                     Legislación laboral 
                 </div>
             </div>
@@ -929,20 +786,7 @@
             margin-left: 30px;
             margin-right: 30px;
         ">
-                <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
-                cursor: pointer;
-                border-radius: 24px;
-                align-items: center;
-                word-wrap: break-word;
-                word-break: break-word;
-                padding: 5px;
-                font-size: 12px;
-                min-height: 50px;
-                min-width: 120px;
-                width: auto;
-                display:flex;
-                justify-content: center;
-                align-items: center;">
+                <div class="div-texto disabled">
                     Legislación de energía 
                 </div>
             </div>
@@ -1127,16 +971,18 @@
     </div>
 </div>
 </div>
-    <div class="row mb-4">
-        <div class="col-lg-12"> 
-            <div style="float:right;"><!--class="row justify-content-end"-->
+    <div class="row mb-4 justify-content-end text-sm-end" style="padding: 0px;position: sticky;bottom: 40px;">
+        <div class="col-sm-12"> 
+            <div class="row"><!--class="row justify-content-end"-->
+                <div class="col-sm-12">
                 <button type="button" class="btn btn-primary btn-label waves-effect right waves-light" (click)="siguiente()" [disabled]="cuerpo_installations.length < 1"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i> Siguiente</button>
+                </div>
             </div>
         </div>
     </div>
 
-<div class="row g-0 text-center justify-content-end text-sm-start align-items-center mb-4" style="padding: 0px;position: fixed;bottom: 75px;width: 84%;" *ngIf="selectCheckedVincular.length > 0">
-    <div class="col-sm-12">
+<div class="row g-0 text-center justify-content-end text-sm-start align-items-center mb-4" style="padding: 0px;position: sticky;bottom: 75px;" *ngIf="selectCheckedVincular.length > 0">
+    <div class="col-sm-12 mb-3">
         <div style="background: #F7B84B; box-shadow: 0px 17px 35px rgba(64, 81, 137, 0.20); border-radius: 2px; overflow: hidden; width: 100%; height: 100%;">
             <div class="col-sm-12">
                 <div class="row mb-3 mt-3">
@@ -1267,20 +1113,7 @@
         margin-left: 30px;
         margin-right: 30px;
     ">
-            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
-            cursor: pointer;
-            border-radius: 24px;
-            align-items: center;
-            word-wrap: break-word;
-            word-break: break-word;
-            padding: 5px;
-            font-size: 12px;
-            min-height: 50px;
-            min-width: 120px;
-            width: auto;
-            display:flex;
-            justify-content: center;
-            align-items: center;" class="div-texto-check texto-check">
+            <div class="div-texto disabled">
                 Legislación ambiental
             </div><!--[ngClass]="{'div-texto-check texto-check': validateCuerpo(c.cuerpoLegal)}" (click)="selectCuerpo(c.cuerpoLegal)"-->
         </div>
@@ -1289,20 +1122,7 @@
         margin-left: 30px;
         margin-right: 30px;
     ">
-            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
-            cursor: pointer;
-            border-radius: 24px;
-            align-items: center;
-            word-wrap: break-word;
-            word-break: break-word;
-            padding: 5px;
-            font-size: 12px;
-            min-height: 50px;
-            min-width: 120px;
-            width: auto;
-            display:flex;
-            justify-content: center;
-            align-items: center;">
+            <div class="div-texto disabled">
                 Legislación de Seguridad y Salud en el trabajo 
             </div>
         </div>
@@ -1311,20 +1131,7 @@
         margin-left: 30px;
         margin-right: 30px;
     ">
-            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
-            cursor: pointer;
-            border-radius: 24px;
-            align-items: center;
-            word-wrap: break-word;
-            word-break: break-word;
-            padding: 5px;
-            font-size: 12px;
-            min-height: 50px;
-            min-width: 120px;
-            width: auto;
-            display:flex;
-            justify-content: center;
-            align-items: center;">
+            <div class="div-texto disabled">
                 Legislación laboral 
             </div>
         </div>
@@ -1333,20 +1140,7 @@
         margin-left: 30px;
         margin-right: 30px;
     ">
-            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;
-            cursor: pointer;
-            border-radius: 24px;
-            align-items: center;
-            word-wrap: break-word;
-            word-break: break-word;
-            padding: 5px;
-            font-size: 12px;
-            min-height: 50px;
-            min-width: 120px;
-            width: auto;
-            display:flex;
-            justify-content: center;
-            align-items: center;">
+            <div class="div-texto disabled">
                 Legislación de energía 
             </div>
         </div>
@@ -1357,11 +1151,13 @@
             <app-toastsp aria-live="polite" aria-atomic="true"></app-toastsp>
             
             <div class="col-xxl-3 col-sm-6 project-card" *ngFor="let s of articles_proyects_group | filter:term4" id="pl1_{{s.normaId}}">
-                <div [ngClass]="!validateIdCuerpo(s.normaId) ? 'card card-height-100 ribbon-box border card-border-success right' : 'card card-height-100 ribbon-box border card-border-danger right'">
+                <div class="card card-height-100 ribbon-box border right" [ngClass]="{'card-border-success': validateIdCuerpo(s.normaId) == 1, 'card-border-warning': validateIdCuerpo(s.normaId) == 2, 'card-border-danger': !validateIdCuerpo(s.normaId)}">
                     <div class="card-body">
-                        <div class="ribbon ribbon-success round-shape" style="font-size: 14px;" *ngIf="!validateIdCuerpo(s.normaId)">Aplica</div>
+                        <div class="ribbon ribbon-success round-shape" style="font-size: 14px;" *ngIf="validateIdCuerpo(s.normaId) == 1">Aplica</div>
+
+                        <div class="ribbon ribbon-warning round-shape" style="font-size: 14px;" *ngIf="validateIdCuerpo(s.normaId) == 2">Aplica Parcial</div>
                         
-                        <div class="ribbon ribbon-danger round-shape" style="font-size: 14px;" *ngIf="validateIdCuerpo(s.normaId)">No Aplica</div>
+                        <div class="ribbon ribbon-danger round-shape" style="font-size: 14px;" *ngIf="!validateIdCuerpo(s.normaId)">No Aplica</div>
 
                         <div class="d-flex flex-column h-100 text-center">
                             <div class="d-flex">
